<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F3058"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:text="@string/flight_mode"
        android:textColor="#EFDF8E"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/flightmodeButton"
        app:layout_constraintEnd_toEndOf="@+id/flightmodeButton"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/flightmodeButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_controller"
        android:textColor="#EFDF8E"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/rcontrButton"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="@+id/rcontrButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/choose_the_mode"
        android:textColor="#EFDF8E"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="370dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/welcome_to_droneapp"
        android:textColor="#EFDF8E"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/flightmodeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/rounded"
        android:paddingStart="95dp"
        android:paddingTop="50dp"
        android:paddingEnd="95dp"
        android:paddingBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:srcCompat="@drawable/ic_waypointsicon" />

    <ImageView
        android:id="@+id/rcontrButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/rounded"
        android:paddingStart="95dp"
        android:paddingTop="50dp"
        android:paddingEnd="95dp"
        android:paddingBottom="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/flightmodeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/flightmodeButton"
        app:layout_constraintTop_toTopOf="@+id/flightmodeButton"
        app:layout_constraintVertical_bias="0.584"
        app:srcCompat="@drawable/ic_remote_control_1" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:layout_marginStart="7dp"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/textView5"
            app:srcCompat="@drawable/ic_drone1" />

        <TextView
            android:id="@+id/textView5"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/connect_to_the_aircraft"
            android:textColor="#EFDF8E"
            android:textSize="11sp" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="31dp"
        android:layout_height="29dp"
        android:layout_marginEnd="44dp"
        android:tint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/ic_setting" />


</androidx.constraintlayout.widget.ConstraintLayout>


